crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__side_by_side_pane_renders_old_and_new_columns.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" Files                           Diff                                                                                   "
" ▾ src                    +1 -1  modified  src/lib.rs                                                        +1 -1 █████"
"▌  ● lib.rs               +1 -1  answer                                                                                 "
" + ci.yml                 +1 -0  @@ -1,3 +1,3 @@                                                                        "
" ○ todo.md                +1 -0     1 pub fn answer() -> u32 {             │    1 pub fn answer() -> u32 {              "
"                                ▌   2     41                               │▌   2     42                                "
"                                    3 }                                    │    3 }                                     "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/3 files                                                                        "
