crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__sidebar_renders_as_a_flat_list_when_configured.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" Hint: c comment  r reply  v viewed  C comments  ? help                                                                 "
"╭ Files ─────────────────────╮╭ Diff ──────────────────────────────────────────────────────────────────────────────────╮"
"│▌A ci.yml              +1 -0││ new file  ci.yml                                                            +1 -0 █████│"
"│ M src/lib.rs          +1 -1││                                                                                        │"
"│ ? todo.md             +1 -0││         1 on: push                                                                     │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"╰────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────────╯"
" DIFF  fixture@main  mcp off  viewed 0/3 files                                                                          "
