crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__the_current_anchorless_stop_shows_its_card_alone.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" How the answer moved (2)        Diff                                                                                   "
"▌What changed  lib.rs            modified  src/lib.rs · 2 comments                                           +1 -1 █████"
" The answer  lib.rs                                                                                                     "
"                                  ▌ What changed  agent · open                                                          "
"                                  ▌ the overview, pointing at nothing                                                   "
"                                  ▌                                                                                     "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/3 files                                                                        "
